--- a/index.html
+++ b/index.html
@@ -4,10 +4,62 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>封神榜</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="css/style.css">
+        <script src="js/script.js"></script>
     </head>
     <body>
-
+        <h1>封神榜</h1>
+        <div class="container-rank">
+            <table>
+                <tr class="head">
+                    <th class="rank head">排名</th>
+                    <th class="name head">Name</th>
+                    <th class="money head">身价</th>
+                </tr>
+                <tr class="preson" id="1">
+                    <td class="rank">Top 1</td>
+                    <td class="name">℡</td>
+                    <td class="money">500</td>
+                </tr>
+                <tr class="preson" id="2">
+                    <td class="rank">Top 2</td>
+                    <td class="name">Qi_iling</td>
+                    <td class="money">90</td>
+                </tr>
+                <tr class="preson" id="3">
+                    <td class="rank">Top 3</td>
+                    <td class="name">Eternity.</td>
+                    <td class="money">80</td>
+                </tr>
+                <tr class="preson" id="4">
+                    <td class="rank">Top 4</td>
+                    <td class="name">ㅤㅤㅤ</td>
+                    <td class="money">20</td>
+                </tr>
+                <tr class="preson"id="5">
+                    <td class="rank">Top 5</td>
+                    <td class="name">小zheng.同学</td>
+                    <td class="money">20</td>
+                </tr>
+                <tr class="preson"id="6">
+                    <td class="rank">Top 6</td>
+                    <td class="name">Raining</td>
+                    <td class="money">10</td> 
+                </tr>
+                <tr class="preson"id="7">
+                    <td class="rank">Top 7</td>
+                    <td class="name">失眠数羊</td>
+                    <td class="money">-720</td>
+                </tr>
+            </table>
+        </div>
+        <!-- <div class="container-honor">
+            <h1>荣誉墙</h1>
+            <div>
+                <h2></h2>
+                <p></p>
+            </div>
+            
+        </div> -->
     </body>
 </html>
